[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameMaster.gd" type="Script" id=2]
[ext_resource path="res://LifeBar.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 5
border_width_right = 5
border_color = Color( 0, 0, 0, 0 )
corner_detail = 11

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Theme" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Enemies" type="Node" parent="."]

[node name="Grass" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
show_behind_parent = true
margin_left = -5.0
margin_top = -5.0
margin_right = 1037.0
margin_bottom = 622.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.180392, 0.823529, 0.286275, 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="LivesBar" type="ProgressBar" parent="UI"]
margin_left = 29.0
margin_top = 24.0
margin_right = 110.0
margin_bottom = 38.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
step = 1.0
value = 3.0
rounded = true
percent_visible = false
script = ExtResource( 3 )

[node name="LivesLabel" type="Label" parent="UI"]
margin_left = 55.0
margin_top = 8.0
margin_right = 95.0
margin_bottom = 22.0
text = "Lives"

[node name="LoseLabel" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 120, 7 )
theme = SubResource( 3 )
text = "YOU HAVE ACHIEVED dead SQUIRREL!"
align = 1
valign = 1

[node name="WinLabel" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 129, 7 )
theme = SubResource( 3 )
text = "YOU HAVE ACHIEVED OMEGA SQUIRREL!"
align = 1
valign = 1
uppercase = true

[connection signal="death" from="Player" to="." method="_on_Player_death"]
[connection signal="hunger_sated" from="Player" to="." method="_on_Player_hunger_sated"]
[connection signal="on_hit" from="Player" to="." method="_on_Player_on_hit"]
[connection signal="on_hit" from="Player" to="UI/LivesBar" method="_on_Player_on_hit"]
[connection signal="win" from="Player" to="." method="_on_Player_win"]
